# Music-toolbox

./: .gitignore  README.md  pyproject.toml
ai_music.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: config.py  main.py
backend/api/routes/: audio.py  midi.py
backend/models/: schemas.py
backend/repositories/: base.py  file_repo.py
backend/services/: audio_service.py  edit_service.py  midi_service.py
data/midi/: 695d44db-1aa0-4b92-a2fd-dd716491c528.mid  695d44db-1aa0-4b92-a2fd-dd716491c528_notes.json
data/tracks/: 695d44db-1aa0-4b92-a2fd-dd716491c528.json
docs/plans/: 2026-03-01-ai-music-design.md  2026-03-01-phase1-core-pipeline.md  2026-03-01-phase2-mic-input.md  2026-03-01-phase2.5-ui-migration.md  2026-03-01-phase3-editing.md  2026-03-01-phase4-ai-modification.md
frontend/: api_client.py  app.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/__legacy_streamlit/: api_client.py  app.py
frontend/__legacy_streamlit/components/: editor.py  record.py
frontend/components/: record.py  upload.py
frontend/pages/: editor.py  upload.py
frontend/src/: api.test.ts  api.ts  main.ts  state.test.ts  state.ts
frontend/src/components/: piano-roll.ts  recorder.test.ts  recorder.ts  toolbar.test.ts  toolbar.ts  upload.test.ts  upload.ts  waveform.ts
frontend/src/lib/: canvas-utils.ts
scripts/: ctl  run_integration_test.sh
tests/: conftest.py
tests/backend/: test_audio_service.py  test_edit_service.py  test_file_repo.py  test_midi_service.py  test_routes.py  test_schemas.py
tests/fixtures/: sample.mid
(+1 files in other folders)
