[project]
name = "ai-music"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "librosa>=0.10.0",
    "basic-pitch>=0.3.0",
    "midi2audio>=0.1.1",
    "pyfluidsynth>=1.3.0",
    "pretty-midi>=0.2.10",
    "soundfile>=0.12.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-watch>=4.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
